Statistics: Disable chart interpolation

--- a/src/pretix/plugins/statistics/templates/pretixplugins/statistics/index.html
+++ b/src/pretix/plugins/statistics/templates/pretixplugins/statistics/index.html
@@ -29,6 +29,7 @@
             ykeys: ['ordered', 'paid'],
             labels: ['{% trans "Placed orders" %}', '{% trans "Paid orders" %}'],
             lineColors: ['#000099', '#009900'],
+            smooth: false,
             resize: true
         });
         new Morris.Bar({
