Statistics: Fixed bar colors

--- a/src/pretix/plugins/statistics/templates/pretixplugins/statistics/index.html
+++ b/src/pretix/plugins/statistics/templates/pretixplugins/statistics/index.html
@@ -38,7 +38,7 @@
             xkey: 'item',
             ykeys: ['ordered', 'paid'],
             labels: ['{% trans "Placed orders" %}', '{% trans "Paid orders" %}'],
-            lineColors: ['#000099', '#009900'],
+            barColors: ['#000099', '#009900'],
             resize: true
         });
     </script>
