Statistics: Added a graph for revenue over time

--- a/src/pretix/plugins/statistics/templates/pretixplugins/statistics/index.html
+++ b/src/pretix/plugins/statistics/templates/pretixplugins/statistics/index.html
@@ -15,6 +15,14 @@
     </div>
     <div class="panel panel-default">
         <div class="panel-heading">
+            <h3 class="panel-title">{% trans "Revenue over time" %}</h3>
+        </div>
+        <div class="panel-body">
+            <div id="rev_chart" style="height: 250px;"></div>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
             <h3 class="panel-title">{% trans "Orders by product" %}</h3>
         </div>
         <div class="panel-body">
@@ -31,6 +39,17 @@
             lineColors: ['#000099', '#009900'],
             smooth: false,
             resize: true
+        });
+        new Morris.Area({
+            element: 'rev_chart',
+            data: {{ rev_data|safe }},
+            xkey: 'date',
+            ykeys: ['revenue'],
+            labels: ['{% trans "Total revenue" %}'],
+            smooth: false,
+            resize: true,
+            fillOpacity: 0.5,
+            postUnits: ' {{ request.event.currency }}'
         });
         new Morris.Bar({
             element: 'obp_chart',
