Statistics: Consistent usage of currencies

--- a/src/pretix/plugins/statistics/templates/pretixplugins/statistics/index.html
+++ b/src/pretix/plugins/statistics/templates/pretixplugins/statistics/index.html
@@ -49,7 +49,7 @@
             smooth: false,
             resize: true,
             fillOpacity: 0.5,
-            postUnits: ' {{ request.event.currency }}'
+            preUnits: '{{ request.event.currency }} '
         });
         new Morris.Bar({
             element: 'obp_chart',
