--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -36,7 +36,7 @@
 
                         {% if can_download %}
                             {% for b in download_buttons %}
-                                <a href="{% url "presale:event.order.download" organizer=request.event.organizer.slug event=request.event.slug order=order.code output=b.identifier %}"
+                                <a href="{% url "control:event.order.download" organizer=request.event.organizer.slug event=request.event.slug code=order.code output=b.identifier %}"
                                    class="btn btn-default">
                                     <span class="fa {{ b.icon }}"></span> {{ b.text }}
                                 </a>
