Refs #40 -- Removed Python 3.2/3.3 support

--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_form.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_form.html
@@ -42,7 +42,7 @@
             </form>
             {% else %}
                 <div class="alert alert-error">
-                    {% trans "HBCI is only available with Python 3.3 or newer and with aqbanking-cli and aqhbci-tool4 installed." %}
+                    {% trans "HBCI is only available with aqbanking-cli and aqhbci-tool4 installed." %}
                 </div>
             {% endif %}
         </div>
