--- a/src/pretix/presale/templates/pretixpresale/event/forgot.html
+++ b/src/pretix/presale/templates/pretixpresale/event/forgot.html
@@ -7,7 +7,7 @@
     <form class="form-horizontal" method="post">
         {% csrf_token %}
         {% bootstrap_form_errors form type='all' layout='inline' %}
-        {% bootstrap_field form.username layout="horizontal" %}
+        {% bootstrap_field form.email layout="horizontal" %}
         <input type="hidden" name="form" value="login" />
         <div class="form-group">
             <div class="submit-group col-md-offset-2 col-md-4 text-right">
