--- a/src/pretix/presale/templates/pretixpresale/event/recover.html
+++ b/src/pretix/presale/templates/pretixpresale/event/recover.html
@@ -11,7 +11,7 @@
         {% bootstrap_field form.password_repeat layout="horizontal" %}
         <input type="hidden" name="form" value="login" />
         <div class="form-group">
-            <div class="submit-group col-md-offset-2 col-md-4 text-right">
+            <div class="submit-group col-md-offset-3 col-md-4">
                 <button type="submit" class="btn btn-primary btn-save">
                     {% trans "Set new password" %}
                 </button>
