Added custom error pages

--- a/src/static/pretixbase/less/cachedfiles.less
+++ b/src/static/pretixbase/less/cachedfiles.less
@@ -1,10 +1,8 @@
 @import "../../bootstrap/less/bootstrap.less";
 @import "../../fontawesome/less/font-awesome.less";
-@import "../../lightbox/css/lightbox.css";
+@import "colors.less";
 
 @fa-font-path: "../../fontawesome/fonts";
-
-@brand-primary: #8E44B3;
 
 body {
     background: #ececec;
