--- a/src/static/pretixpresale/less/main.less
+++ b/src/static/pretixpresale/less/main.less
@@ -2,8 +2,7 @@
 @import "../../fontawesome/less/font-awesome.less";
 @import "../../lightbox/css/lightbox.css";
 @fa-font-path: "../../fontawesome/fonts";
-
-@brand-primary: #8E44B3;
+@import "../../pretixbase/less/colors.less";
 
 @import "event.less";
 @import "forms.less";
