--- a/src/pretix/control/templates/pretixcontrol/auth/register.html
+++ b/src/pretix/control/templates/pretixcontrol/auth/register.html
@@ -1,7 +1,9 @@
 {% extends "pretixcontrol/auth/base.html" %}
 {% load bootstrap3 %}
+{% load staticfiles %}
 {% load i18n %}
 {% block content %}
+    <img src="{% static "pretixbase/img/pretix-logo.svg" %}" class="logo" />
 	<form class="form-signin" action="" method="post">
         <h3>{% trans "Create a new account" %}</h3>
 		{% bootstrap_form_errors form type='all' layout='inline' %}
