--- a/src/pretix/presale/templates/pretixpresale/event/login.html
+++ b/src/pretix/presale/templates/pretixpresale/event/login.html
@@ -36,34 +36,36 @@
                 </div>
             </div>
         </div>
-        <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingOne">
-                <h4 class="panel-title">
-                    <a data-toggle="collapse" href="#guestForm" data-parent="#login_accordion">
-                        {% trans "I want to order as a guest" %}
-                    </a>
-                </h4>
-            </div>
-            <div id="guestForm" class="panel-collapse collapsed {% if request.POST.form == 'guest' %}in{% endif %}">
-                <div class="panel-body">
+        {% if "guest" in request.GET %}
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingOne">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" href="#guestForm" data-parent="#login_accordion">
+                            {% trans "I want to order as a guest" %}
+                        </a>
+                    </h4>
+                </div>
+                <div id="guestForm" class="panel-collapse collapsed {% if request.POST.form == 'guest' %}in{% endif %}">
                     <div class="panel-body">
-                        <form class="form-horizontal" method="post">
-                            {% csrf_token %}
-                            {% bootstrap_form_errors guest_form type='all' layout='inline' %}
-                            {% bootstrap_field guest_form.email layout="horizontal" %}
-                            <input type="hidden" name="form" value="guest" />
-                            <div class="form-group">
-                                <div class="submit-group col-md-offset-3 col-md-4">
-                                    <button type="submit" class="btn btn-primary btn-save">
-                                        {% trans "Continue" %}
-                                    </button>
+                        <div class="panel-body">
+                            <form class="form-horizontal" method="post">
+                                {% csrf_token %}
+                                {% bootstrap_form_errors guest_form type='all' layout='inline' %}
+                                {% bootstrap_field guest_form.email layout="horizontal" %}
+                                <input type="hidden" name="form" value="guest" />
+                                <div class="form-group">
+                                    <div class="submit-group col-md-offset-3 col-md-4">
+                                        <button type="submit" class="btn btn-primary btn-save">
+                                            {% trans "Continue" %}
+                                        </button>
+                                    </div>
                                 </div>
-                            </div>
-                        </form>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        {% endif %}
         <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
