--- a/src/static/pretixcontrol/less/auth.less
+++ b/src/static/pretixcontrol/less/auth.less
@@ -37,3 +37,9 @@ footer {
         margin-top: 0;
     }
 }
+
+.container > .alert {
+    max-width: 330px;
+    margin: auto;
+    margin-bottom: 20px;
+}
