Make all orders "guest orders"

--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -67,7 +67,7 @@
                     <dd>{{ order.expires }}</dd>
                 {% endif %}
                 <dt>{% trans "User" %}</dt>
-                <dd>{{ order.user|default:order.guest_email }}</dd>
+                <dd>{{ order.email }}</dd>
             </dl>
         </div>
     </div>
