--- a/src/pretix/presale/templates/pretixpresale/event/order_pay_confirm.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order_pay_confirm.html
@@ -27,7 +27,7 @@
         <div class="row checkout-button-row">
             <div class="col-md-4">
                 <a class="btn btn-block btn-default btn-lg"
-                   href="{% url "presale:event.order" event=request.event.slug organizer=request.event.organizer.slug order=order.code %}">
+                   href="{% url "presale:event.order" event=request.event.slug organizer=request.event.organizer.slug secret=order.secret order=order.code %}">
                     {% trans "Cancel" %}
                 </a>
             </div>
