--- a/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
@@ -8,6 +8,20 @@
     <form class="form-horizontal" method="post">
         {% csrf_token %}
         <div class="panel-group" id="questions_accordion">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" href="#contact" data-parent="#questions_accordion">
+                            <strong>{% trans "Contact information" %}</strong>
+                        </a>
+                    </h4>
+                </div>
+                <div id="contact" class="panel-collapse collapsed in">
+                    <div class="panel-body">
+                        {% bootstrap_form contact_form layout="horizontal" %}
+                    </div>
+                </div>
+            </div>
             {% for form in forms %}
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -22,7 +36,7 @@
                         </h4>
                     </div>
                     <div id="cp{{ form.pos.identity }}"
-                            class="panel-collapse collapsed {% if forloop.counter0 == 0 %}in{% endif %}">
+                            class="panel-collapse collapsed in">
                         <div class="panel-body">
                             {% bootstrap_form form layout="horizontal" %}
                         </div>
@@ -33,7 +47,7 @@
         <div class="row checkout-button-row">
             <div class="col-md-4">
                 <a class="btn btn-block btn-default btn-lg"
-                        href="{{ view.get_index_url }}">
+                        href="{{ prev_url }}">
                     {% trans "Go back" %}
                 </a>
             </div>
