--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -50,7 +50,7 @@
         </div>
     {% endif %}
     {% if event.presale_is_running or event.settings.show_items_outside_presale_period %}
-        <form method="post"
+        <form method="post" data-asynctask
                 action="{% url "presale:event.cart.add" organizer=request.event.organizer.slug event=request.event.slug %}?next={{ request.path|urlencode }}">
             {% csrf_token %}
             {% for tup in items_by_category %}
