--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -13,6 +13,7 @@
         <script type="text/javascript" src="{% static "js/jquery.formset.js" %}"></script>
         <script type="text/javascript" src="{% static "bootstrap/dist/js/bootstrap.js" %}"></script>
         <script type="text/javascript" src="{% static "pretixpresale/js/ui/main.js" %}"></script>
+        <script type="text/javascript" src="{% static "pretixpresale/js/ui/asynctask.js" %}"></script>
     {% endcompress %}
     {{ html_head|safe }}
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -63,6 +64,16 @@
         {% endblocktrans %}
     {% endwith %}
 </footer>
+<script type="text/javascript">
+    var default_loading_message = '{% trans "We are processing your request…" %}';
+</script>
+<div id="loadingmodal">
+    <i class="fa fa-cog big-rotating-icon"></i>
+    <h1>{% trans "We are processing your request…" %}</h1>
+    <p>
+        {% trans "If this takes longer than a few minutes, please contact us." %}
+    </p>
+</div>
 {% compress js %}
     <script type="text/javascript" src="{% static "lightbox/js/lightbox.min.js" %}"></script>
 {% endcompress %}
