Removed long_description field

--- a/src/pretix/control/templates/pretixcontrol/item/index.html
+++ b/src/pretix/control/templates/pretixcontrol/item/index.html
@@ -10,8 +10,7 @@
 			{% bootstrap_field form.active layout="horizontal" %}
 			{% bootstrap_field form.category layout="horizontal" %}
             {% bootstrap_field form.admission layout="horizontal" %}
-			{% bootstrap_field form.short_description layout="horizontal" %}
-			{% bootstrap_field form.long_description layout="horizontal" %}
+			{% bootstrap_field form.description layout="horizontal" %}
             {% bootstrap_field form.picture layout="horizontal" %}
 		</fieldset>
 		<fieldset>
