--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -72,7 +72,7 @@
                                         <a href="javascript:void(0);" data-toggle="variations">
                                             <strong>{{ item.name }}</strong>
                                         </a>
-                                        {% if item.short_description %}<p>{{ item.short_description }}</p>{% endif %}
+                                        {% if item.description %}<p>{{ item.description }}</p>{% endif %}
                                     </div>
                                     <div class="col-md-2 col-xs-6 price">
                                         {% if item.min_price != item.max_price %}
